Eigen pagina toevoegen aan nav

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header>
             <nav>
                 <a href="./index.html">Home</a>
+                <a href="./6003226.html">Eigen pagina</a>
             </nav>
         </header>
 
